# pixel_heal_thyself

./: .gitignore  CLAUDE.md  README.md  pixel_heal_thyself.code-workspace  pyproject.toml  train.sh
.github/workflows/: ci.yml  smoke_tests.yml
config/: ci.yaml  config.yaml  default.yaml  dev.yaml  prod.yaml  smoke_tests.yaml  stag.yaml
config/data/: ci.yaml  default.yaml  limited.yaml  small.yaml
config/hydra/callbacks/: custom_run_dirs.yaml
config/inference/: afgsa.yaml  default.yaml
config/model/: README.md  afgsa.yaml  common.yaml  mamba.yaml
config/trainer/: ci.yaml  default.yaml
pht/: __init__.py  inference.py  logger.py  train.py  utils.py
pht/config/: __init__.py  base.py  registry.py
pht/hydra/: __init__.py
pht/hydra/plugins/: __init__,py  __init__.py  custom_run_dirs.py  pht_run_dirs_resolver.py
pht/models/: __init__.py  base_trainer.py  losses.py
pht/models/afgsa/: __init__.py  dataset.py  discriminators.py  film.py  gen_hdf5.py  inference.py  loss.py  metric.py  model.py  prefetch_dataloader.py  preprocessing.py  train.py  util.py
pht/models/afgsa/code/: __init__.py
pht/models/afgsa/code/wo_diff_spec_decomp/: __init__.py
pht/models/afgsa/code/wo_diff_spec_decomp/test_inference/: __init__.py
pht/models/afgsa/code/wo_diff_spec_decomp/train/: __init__.py  discriminators.py  gen_hdf5.py  loss.py  model.py  preprocessing.py  train.py  util.py
pht/models/mamba/: __init__.py  inference.py  model.py  train.py
setup/: README.md  install-hooks.sh
setup/hooks/: pre-push
talapas_jobs/: afgsa_dev.sh  afgsa_prod.sh  afgsa_stag.sh
tests/: smoke_tests.py  test_pht_run_dirs_resolver.py  test_utils.py
tools/: __init__.py  report_prep.sh  resize_exrs.sh  runs_analysis.py  runs_inference_analysis.py  termlog.py  train.sh
