[project]
name = "Pixel-Heal-Thyself"
version = "0.1.0"
description = "Deep learning based image denoiser for volumetric path traced images"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "causal-conv1d>=1.5.0.post8",
    "einops>=0.8.1",
    "h5py>=3.13.0",
    "hilbertcurve>=2.0.5",
    "hydra-core>=1.3.2",
    "kornia>=0.8.0",
    "lpips>=0.1.4",
    "mamba-ssm>=2.2.4",
    "matplotlib>=3.10.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "prefetch-generator>=1.0.3",
    "pyexr>=0.5.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
exclude = ["pht/models/afgsa/**"]
