[project]
name = "Pixel-Heal-Thyself"
version = "0.1.0"
description = "Deep learning based image denoiser for volumetric path traced images"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "expecttest>=0.3.0",         # Torch needs this?
    "h5py>=3.13.0",
    "hilbertcurve>=2.0.5",
    "hydra-core>=1.3.2",
    "kornia>=0.8.0",
    "lpips>=0.1.4",
    "matplotlib>=3.10.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "prefetch-generator>=1.0.3",
    "psutil>=7.0.0",
    "pyexr>=0.5.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
exclude = ["tools/*", "meeting_notes/*"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
]
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN001",
    "ANN003",
    "ANN201",
    "ANN202",
    "B023",
    "D101",
    "D103",
    "INP001",
    "PLR2004",
]
"tests/smoke_tests.py" = ["D101", "D102", "D103", "INP001", "PLR2004"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
